@@ -1,7 +1,7 @@
 package com.github.laxika.magicalvibes.cards.o;
 
-import com.github.laxika.magicalvibes.cards.g.GrizzlyBears;
-import com.github.laxika.magicalvibes.cards.l.LlanowarElves;
+import com.github.laxika.magicalvibes.cards.b.BalduvianBears;
+import com.github.laxika.magicalvibes.cards.i.Island;
 import com.github.laxika.magicalvibes.cards.p.Plains;
 import com.github.laxika.magicalvibes.model.Card;
 import com.github.laxika.magicalvibes.model.ManaColor;
@@ -9,6 +9,7 @@ import com.github.laxika.magicalvibes.model.PendingInteraction;
 import com.github.laxika.magicalvibes.model.Permanent;
 import com.github.laxika.magicalvibes.service.interaction.InteractionAnswer;
 import com.github.laxika.magicalvibes.testutil.BaseCardTest;
+import com.github.laxika.magicalvibes.testutil.CardUsed;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
@@ -18,18 +19,17 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @DisplayName("Orcish Librarian")
+@CardUsed({OrcishLibrarian.class, BalduvianBears.class, Island.class, Plains.class})
 class OrcishLibrarianTest extends BaseCardTest {
 
     private Permanent addLibrarianReady() {
-        Permanent librarian = harness.addToBattlefieldAndReturn(player1, new OrcishLibrarian());
-        librarian.setSummoningSick(false);
-        return librarian;
+        return addCreatureReady(player1, new OrcishLibrarian());
     }
 
     private List<Card> eightCards() {
         List<Card> cards = new ArrayList<>();
         for (int i = 0; i < 4; i++) {
-            cards.add(new GrizzlyBears());
+            cards.add(new BalduvianBears());
             cards.add(new Plains());
         }
         return cards;
@@ -40,7 +40,7 @@ class OrcishLibrarianTest extends BaseCardTest {
     void paysManaAndTapsWhenActivated() {
         Permanent librarian = addLibrarianReady();
         harness.addMana(player1, ManaColor.RED, 1);
-        harness.setLibrary(player1, List.of(new GrizzlyBears()));
+        harness.setLibrary(player1, List.of(new BalduvianBears()));
 
         harness.activateAbility(player1, 0, null, null);
         harness.passBothPriorities();
@@ -69,6 +69,10 @@ class OrcishLibrarianTest extends BaseCardTest {
         assertThat(reorder.toBottom()).isFalse();
         assertThat(reorder.deckOwnerId()).isEqualTo(player1.getId());
 
+        List<Card> lookedAt = new ArrayList<>(gd.getPlayerExiledCards(player1.getId()));
+        lookedAt.addAll(reorder.cards());
+        assertThat(lookedAt).containsExactlyInAnyOrderElementsOf(library);
+
         // The eight looked-at cards are split exactly between exile and the reorder pool.
         assertThat(gd.playerDecks.get(player1.getId())).isEmpty();
     }
@@ -79,7 +83,7 @@ class OrcishLibrarianTest extends BaseCardTest {
         addLibrarianReady();
         harness.addMana(player1, ManaColor.RED, 1);
         List<Card> library = eightCards();
-        library.add(new LlanowarElves()); // ninth card stays untouched below the top eight
+        library.add(new Island()); // ninth card stays untouched below the top eight
         harness.setLibrary(player1, library);
         Card ninth = library.get(8);
 
@@ -94,8 +98,8 @@ class OrcishLibrarianTest extends BaseCardTest {
 
         List<Card> deck = gd.playerDecks.get(player1.getId());
         assertThat(deck).hasSize(5);
-        assertThat(deck.getFirst()).isSameAs(wantedOnTop);
-        assertThat(deck.get(4)).isSameAs(ninth);
+        assertThat(deck).containsExactly(
+                wantedOnTop, reorder.cards().get(0), reorder.cards().get(1), reorder.cards().get(2), ninth);
     }
 
     @Test
@@ -103,7 +107,7 @@ class OrcishLibrarianTest extends BaseCardTest {
     void smallLibraryExilesEverything() {
         addLibrarianReady();
         harness.addMana(player1, ManaColor.RED, 1);
-        harness.setLibrary(player1, List.of(new GrizzlyBears(), new Plains(), new Plains()));
+        harness.setLibrary(player1, List.of(new BalduvianBears(), new Plains(), new Plains()));
 
         harness.activateAbility(player1, 0, null, null);
         harness.passBothPriorities();
@@ -114,11 +118,28 @@ class OrcishLibrarianTest extends BaseCardTest {
     }
 
     @Test
+    @DisplayName("An empty library leaves no cards to exile or reorder")
+    void emptyLibraryDoesNothing() {
+        Permanent librarian = addLibrarianReady();
+        harness.addMana(player1, ManaColor.RED, 1);
+        harness.setLibrary(player1, List.of());
+
+        harness.activateAbility(player1, 0, null, null);
+        harness.passBothPriorities();
+
+        assertThat(gd.getPlayerExiledCards(player1.getId())).isEmpty();
+        assertThat(gd.playerDecks.get(player1.getId())).isEmpty();
+        assertThat(gd.interaction.isAwaitingInput()).isFalse();
+        assertThat(gd.playerManaPools.get(player1.getId()).get(ManaColor.RED)).isZero();
+        assertThat(librarian.isTapped()).isTrue();
+    }
+
+    @Test
     @DisplayName("Five cards left after the random exiles means a single card goes straight back on top")
     void singleSurvivorGoesBackOnTopWithoutPrompt() {
         addLibrarianReady();
         harness.addMana(player1, ManaColor.RED, 1);
-        Card survivorPool0 = new GrizzlyBears();
+        Card survivorPool0 = new BalduvianBears();
         harness.setLibrary(player1, List.of(survivorPool0, new Plains(), new Plains(), new Plains(), new Plains()));
 
         harness.activateAbility(player1, 0, null, null);
